--- a/todo_app/css/todo.css
+++ b/todo_app/css/todo.css
@@ -6,6 +6,7 @@ html{
 body{
     max-width: 500px;
     margin: 0 auto;
+    background-color: bisque;
    
 }
 
@@ -14,7 +15,7 @@ input{
     width: 500px;
     height: 60px;
     font-size: 40px;
-    border: 0;
+    border: 1px solid black;
 }
 
 input:focus{
@@ -49,3 +50,6 @@ li{
     margin: 0;
 }
 
+.remove {
+    padding-bottom: 5px;
+}
